assets/scss/components/_header.scss
// This .header work has been superseded by the work found in govuk_template
//POTENTIALLY-NOT-IN-USE
.header {
  @extend %contain-floats;
  background-color: $black;

  @include ie(6) {
    width: 960px;
  }
}

//POTENTIALLY-NOT-IN-USE
.header__logo {
  @extend %contain-floats;
  padding-top: 0;
  float: left;
  margin: 5px 0 2px 0;

  @media screen and (max-width: 379px) {
    width: auto;
    float: none;
  }

  a {
    float: left;
    position: relative;
    width: 166px;
    height: 30px;
    overflow: hidden;

    img {
      position: absolute;
      left: -166px;
      top: 0;
      border: none;
      width: 200%;
      height: 300%;
    }
  }
}

/*
Header

A page header is used to show a heading for a section on a page using `.page-header`

Markup:
<header class="page-header">
    <h1>Heading level 1</h1>
</header>

Discussion: https://hmrcdigital.hackpad.com/Header-8mpwxrjV1lc

Styleguide Header
*/

// Overriding page header styling from GOVUK elements
.page-header {
  margin: 0;
  border-bottom: 0px;
  padding: 0;
}

/*
Transaction

A transactional header is to signify the completion of a transaction on a service. You can use this heading with the following markup.


Markup:
<div class="transaction-banner--complete">
  <h1 class="transaction-banner__heading">Heading level 1</h1>
  <p>Information concerning the transaction</p>
</div>

Styleguide Header.Transaction
*/
.transaction-banner--complete {
  background-color: #28a197;
  color: $white;
  padding: 30px;
  margin-bottom: 30px;
  text-align: center;

  @media print {
    background-color: $white;
    color: $black;
    text-align: left;
    padding: 0;
  }
}

.transaction-banner__heading {
  @include bold-36();
  color: $white;
  margin: 15px 0;
}

/*
Header

Header Navigation is used to display information such as title and links to the user.

Markup:
<header id="global-header">
  <div class="header-wrapper">
    <nav role="navigation">
      <a href="#" class="header__menu__proposition-name">Title</a>
      <ul class="header__menu__proposition-links">
          <a href="#">Link 1</a>
          <a href="#">Link 2</a>
          <a href="#">Link 3</a>
      </ul>
    </nav>
  </div>
</header>

*/

.header__menu__proposition-name {
  @include bold-24;
  text-decoration: none;
  color: $white;
}

a.header__menu__proposition-name {

  &:hover,
  &:focus,
  &:active {
    text-decoration: underline;
  }
}

.header__menu__proposition-links {
  @include bold-16;
  float: right;
  list-style-type: none;
  padding: 0;
  margin: 0;

  @include media-down(tablet) {
    width: 100%;
  }

  li {
    display: inline;
    padding-right: em(15);
  }

  a {
    @include bold-16;
    color: $white;
    text-decoration: none;
  }
}

